Version 5.9.12
- Added LINE INPUT to BASIC
- Added definitions for BUFSIZ and L_tmpnam to stdio.h
- Fixed "CLASS USING" file name lookups inside CLASS in BASIC
- Fixed incorrect address calculation when AUGD is needed for CALLPA

Version 5.9.11
- Added BOOLEAN keyword to BASIC
- Added some additional optimizations (thanks again, Ada!)
- Added -Wextra flag (ignored for now) to flexcc
- Fixed -gbrk bug which crept in last release
- Fixed some problems parsing C function pointer type declarations
- Fixed some optimizations incorrectly happening to ORG/END assembly
- Fixed some other incorrect optimizations
- Fixed "extern" in C function definitions
- Made it so defining a _clkmode enum in C works as intended
- Reserved REDIM and PRESERVE keywords in BASIC
- Some more PASM optimizations from Ada (thanks!)

Version 5.9.10
- Added a LOT of helpful optimizations contributed by Ada Gottensträter
- Added __HAVE_FCACHE__ define if FCACHE is enabled (also contributed by Ada)
- Added --nostdlib flag to suppress default include files
- Added KILL function to delete files in BASIC
- Added ELSE clause to single line IF in BASIC
- Actually fail compilation if a preprocessor #error directive is found in Spin
- Fixed some bugs in time related functions
- Fixed FCACHE not being enabled during system module compilation
- Fixed a nasty condition code printing bug (thanks Ada!)
- Fixed DEBUG with multiple return valued functions
- Merged Ada's change to support Shift-JIS character encoding
- Merged Evan's smartpin SD card reading code for much faster SD card access on P2
- Updated FatFs to newer version

Version 5.9.9
- Added special preprocessor comments {$flexspin ... } for FlexSpin specific code.
- Allow dynamic sign/zero extend on P1 (thanks Ada)
- Fixed variable redeclaration in Basic OPTION IMPLICIT
- Fixed an immediate addressing bug that showed up with DECLARE ALIAS sometimes
- Fixed curdir$() problems in BASIC
- Fixed an issue with += of strings where the rhs is a function call