@@ -493,17 +493,24 @@ unsigned char sys_common_spin[] = {
   0x6d, 0x74, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x62, 0x61, 0x73, 0x69, 0x63,
   0x5f, 0x6f, 0x70, 0x65, 0x6e, 0x28, 0x68, 0x2c, 0x20, 0x73, 0x65, 0x6e,
   0x64, 0x66, 0x2c, 0x20, 0x72, 0x65, 0x63, 0x66, 0x2c, 0x20, 0x63, 0x6c,
-  0x6f, 0x73, 0x65, 0x66, 0x29, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x7b, 0x2b,
-  0x2b, 0x63, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x78, 0x69, 0x6f, 0x7d, 0x20,
-  0x66, 0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73, 0x79, 0x73,
-  0x2f, 0x66, 0x6d, 0x74, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x62, 0x61, 0x73,
-  0x69, 0x63, 0x5f, 0x6f, 0x70, 0x65, 0x6e, 0x5f, 0x73, 0x74, 0x72, 0x69,
-  0x6e, 0x67, 0x28, 0x68, 0x2c, 0x20, 0x73, 0x74, 0x72, 0x2c, 0x20, 0x69,
-  0x6f, 0x6d, 0x6f, 0x64, 0x65, 0x29, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x7b,
+  0x6f, 0x73, 0x65, 0x66, 0x29, 0x20, 0x3a, 0x20, 0x72, 0x3d, 0x6c, 0x6f,
+  0x6e, 0x67, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x7b, 0x2b, 0x2b, 0x63, 0x6f,
+  0x6d, 0x70, 0x6c, 0x65, 0x78, 0x69, 0x6f, 0x7d, 0x20, 0x66, 0x69, 0x6c,
+  0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73, 0x79, 0x73, 0x2f, 0x66, 0x6d,
+  0x74, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x62, 0x61, 0x73, 0x69, 0x63, 0x5f,
+  0x6f, 0x70, 0x65, 0x6e, 0x5f, 0x73, 0x74, 0x72, 0x69, 0x6e, 0x67, 0x28,
+  0x68, 0x2c, 0x20, 0x73, 0x74, 0x72, 0x2c, 0x20, 0x69, 0x6f, 0x6d, 0x6f,
+  0x64, 0x65, 0x29, 0x20, 0x3a, 0x20, 0x72, 0x3d, 0x6c, 0x6f, 0x6e, 0x67,
+  0x0a, 0x70, 0x72, 0x69, 0x20, 0x7b, 0x2b, 0x2b, 0x63, 0x6f, 0x6d, 0x70,
+  0x6c, 0x65, 0x78, 0x69, 0x6f, 0x7d, 0x20, 0x66, 0x69, 0x6c, 0x65, 0x20,
+  0x22, 0x6c, 0x69, 0x62, 0x73, 0x79, 0x73, 0x2f, 0x66, 0x6d, 0x74, 0x2e,
+  0x63, 0x22, 0x20, 0x5f, 0x62, 0x61, 0x73, 0x69, 0x63, 0x5f, 0x63, 0x6c,
+  0x6f, 0x73, 0x65, 0x28, 0x68, 0x29, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x7b,
   0x2b, 0x2b, 0x63, 0x6f, 0x6d, 0x70, 0x6c, 0x65, 0x78, 0x69, 0x6f, 0x7d,
-  0x20, 0x66, 0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x73, 0x79,
-  0x73, 0x2f, 0x66, 0x6d, 0x74, 0x2e, 0x63, 0x22, 0x20, 0x5f, 0x62, 0x61,
-  0x73, 0x69, 0x63, 0x5f, 0x63, 0x6c, 0x6f, 0x73, 0x65, 0x28, 0x68, 0x29,
+  0x20, 0x66, 0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c, 0x69, 0x62, 0x63, 0x2f,
+  0x75, 0x6e, 0x69, 0x78, 0x2f, 0x70, 0x6f, 0x73, 0x69, 0x78, 0x69, 0x6f,
+  0x2e, 0x63, 0x22, 0x20, 0x5f, 0x66, 0x72, 0x65, 0x65, 0x66, 0x69, 0x6c,
+  0x65, 0x28, 0x29, 0x20, 0x3a, 0x20, 0x72, 0x3d, 0x6c, 0x6f, 0x6e, 0x67,
   0x0a, 0x70, 0x72, 0x69, 0x20, 0x66, 0x69, 0x6c, 0x65, 0x20, 0x22, 0x6c,
   0x69, 0x62, 0x73, 0x79, 0x73, 0x2f, 0x66, 0x6d, 0x74, 0x2e, 0x63, 0x22,
   0x20, 0x5f, 0x62, 0x61, 0x73, 0x69, 0x63, 0x5f, 0x70, 0x72, 0x69, 0x6e,
@@ -1134,4 +1141,4 @@ unsigned char sys_common_spin[] = {
   0x64, 0x68, 0x69, 0x29, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x74, 0x75, 0x72,
   0x6e, 0x20, 0x72, 0x6c, 0x6f, 0x2c, 0x20, 0x72, 0x68, 0x69, 0x0a, 0x00
 };
-unsigned int sys_common_spin_len = 13607;
+unsigned int sys_common_spin_len = 13691;
